--- a/debian/src/changelog
+++ b/debian/src/changelog
@@ -1,3 +1,13 @@
+typo3-src (4.2.3-1) unstable; urgency=high
+
+  * New upstream release.
+    - fixes XSS vulnerability in Typo3 backendmodul "fileadmin" (Closes: 505324)
+    - fixes XSS vulnerability in Typo3 sysext "felogin" (Closes: 505325)
+    - fixes the passwords are not changeable bug in the backend (Closes: 505326)
+  * added dependency on libjs-scriptaculous
+
+ -- Christian Welzel <gawain@camlann.de>  Tue, 11 Nov 2008 20:00:00 +0100
+
 typo3-src (4.2.2-1) unstable; urgency=low
 
   * New upstream release.
