--- a/debian/src/changelog
+++ b/debian/src/changelog
@@ -1,3 +1,16 @@
+typo3-src (4.3.0~alpha1-1) experimental; urgency=low
+
+  * New upstream release.
+  * Dropped binary package typo3.
+  * Added new binary package typo3-database.
+  * Dependency cleanup for the binary package typo3-src.
+  * Some cleanup in README files.
+  * Added small code snippet to rules to build an overall-sql-file for use
+    in typo3-database.
+  * Rewritten long description.
+
+ -- Christian Welzel <gawain@camlann.de>  Thu, 20 Nov 2008 20:00:00 +0100
+
 typo3-src (4.2.3-1) unstable; urgency=high
 
   * New upstream release.
