--- a/4.2/dummy/changelog
+++ b/4.2/dummy/changelog
@@ -1,3 +1,13 @@
+typo3-dummy (4.2.4-1) unstable; urgency=high
+
+  * New upstream release.
+  * Added /usr/share/javascript/prototype/, /usr/share/javascript/scriptaculous/
+    to open_basedir in apache.conf. (Closes: 512624)
+  * Changed sendmail_path in apache.conf to include parameters "-t -i"
+    (Closes: 512626)
+
+ -- Christian Welzel <gawain@camlann.de>  Thu, 22 Jan 2009 12:00:00 +0100
+
 typo3-dummy (4.2.3-1) unstable; urgency=low
 
   * New upstream release.
