--- a/4.2/src/changelog
+++ b/4.2/src/changelog
@@ -1,3 +1,10 @@
+typo3-src (4.2.5-1) unstable; urgency=medium
+
+  * New upstream release.
+    - fixes a serious bug in session handling with not logged in FE-Users.
+
+ -- Christian Welzel <gawain@camlann.de>  Mon, 26 Jan 2009 20:00:00 +0100
+
 typo3-src (4.2.4-1) unstable; urgency=high
 
   * New upstream release.
