--- a/4.2/src/changelog
+++ b/4.2/src/changelog
@@ -1,3 +1,11 @@
+typo3-src (4.2.6-1) unstable; urgency=high
+
+  * New upstream release.
+    - fixes TYPO3 Security Bulletin TYPO3-SA-2009-002: Information
+      disclosure and XSS vulnerabilities in TYPO3 (Closes: 514713)
+
+ -- Christian Welzel <gawain@camlann.de>  Mon, 10 Feb 2009 12:00:00 +0100
+
 typo3-src (4.2.5-1) unstable; urgency=medium
 
   * New upstream release.
