--- a/4.2/src/changelog
+++ b/4.2/src/changelog
@@ -1,3 +1,9 @@
+typo3-src (4.2.8-1) unstable; urgency=low
+
+  * New upstream release.
+
+ -- Christian Welzel <gawain@camlann.de>  Sat, 04 Jul 2009 17:00:00 +0100
+
 typo3-src (4.2.6-1) unstable; urgency=high
 
   * New upstream release.
