commit of 4.2.9 changelog file
git-svn-id: https://svn.typo3.org/TYPO3v4/Extensions/packaging/branches/debian@25327 735d13b6-9817-0410-8766-e36946ffe9aa

--- a/4.2/src/changelog
+++ b/4.2/src/changelog
@@ -1,3 +1,9 @@
+typo3-src (4.2.9-1) unstable; urgency=low
+
+  * New upstream release.
+
+ -- Christian Welzel <gawain@camlann.de>  Mon, 12 Oct 2009 22:00:00 +0100
+
 typo3-src (4.2.8-1) unstable; urgency=low
 
   * New upstream release.
