--- a/debian/src/changelog
+++ b/debian/src/changelog
@@ -1,3 +1,27 @@
+typo3-src (4.3.2-1) unstable; urgency=high
+
+  * New upstream release:
+    - fixes "TYPO3 Security Bulletin TYPO3-SA-2010-004: Multiple
+      vulnerabilities in TYPO3 Core" (Closes: 571151)
+
+ -- Christian Welzel <gawain@camlann.de>  Wed, 24 Feb 2010 22:00:00 +0100
+
+typo3-src (4.3.1-2) unstable; urgency=low
+
+  * fixed wrong link to prototype javascript library (Closes: 561095)
+  * raised standards version to 3.8.4
+
+ -- Christian Welzel <gawain@camlann.de>  Sat, 13 Feb 2010 15:00:00 +0100
+
+typo3-src (4.3.1-1) unstable; urgency=high
+
+  * New upstream release:
+    - fixes "TYPO3 Security Bulletin TYPO3-SA-2010-001: Authentication
+      Bypass in TYPO3 Core" (Closes: 567163)
+  * fixed spelling error in typo3-database.README.Debian.
+
+ -- Christian Welzel <gawain@camlann.de>  Fri, 29 Jan 2010 18:00:00 +0100
+
 typo3-src (4.3.0-1) unstable; urgency=low
 
   * New upstream release.
