--- a/debian/dummy/changelog
+++ b/debian/dummy/changelog
@@ -1,3 +1,10 @@
+typo3-dummy (4.3.0-4.1) unstable; urgency=low
+
+  * Non-maintainer upload.
+  * Fix encoding of Swedish debconf translation.
+
+ -- Christian Perrier <bubulle@debian.org>  Wed, 12 Jan 2011 07:31:50 +0100
+
 typo3-dummy (4.3.0-4) unstable; urgency=low
 
   [ Christian Welzel ]
