--- a/4.5-lts/src/changelog
+++ b/4.5-lts/src/changelog
@@ -1,3 +1,31 @@
+typo3-src (4.5.9+dfsg1-1) unstable; urgency=high
+
+  * New upstream release:
+    - fixes: "TYPO3 Security Bulletin TYPO3-CORE-SA-2011-004: Remote
+      Code Execution in TYPO3 Core" (Closes: #652365)
+
+ -- Christian Welzel <gawain@camlann.de>  Fri, 16 Dec 2011 20:00:00 +0100
+
+typo3-src (4.5.8+dfsg1-1) unstable; urgency=medium
+
+  * New upstream release.
+  * Adopted patch 02-dummy-defaults.patch to new localconf.php.
+  * Removed unused lintian override "embedded-php-library".
+  * Added build-arch to build-indep rules.
+  * Raised standards version to 3.9.2
+
+ -- Christian Welzel <gawain@camlann.de>  Thu, 13 Dec 2011 20:00:00 +0100
+
+typo3-src (4.5.6+dfsg1-1) unstable; urgency=high
+
+  * New upstream release:
+    - fixes: "TYPO3 Security Bulletin TYPO3-CORE-SA-2011-002: Potential
+      SQL injection vulnerability in TYPO3 Core" (Closes: 641682)
+    - fixes: "TYPO3 Security Bulletin TYPO3-CORE-SA-2011-003: Improper error
+      handling could lead to cache flooding in TYPO3 Core" (Closes: 641683)
+
+ -- Christian Welzel <gawain@camlann.de>  Thu, 15 Sep 2011 10:00:00 +0100
+
 typo3-src (4.5.4+dfsg1-1) unstable; urgency=high
 
   * New upstream release:
